# proyecto-final

./: .gitignore  README.md  clustering_assignments.json  pyproject.toml  ute-data-analysis.ipynb
configs/: autoformer_clustering.toml  autoformer_country.toml  autoformer_day_ahead_no_temp.toml  autoformer_day_ahead_temp.toml  autoformer_regions.toml  autoformer_weekly_no_temp.toml  autoformer_weekly_temp.toml  baseline_country.toml  baseline_day_ahead.toml  baseline_weekly.toml  linear_country.toml  linear_day_ahead_no_temp.toml  linear_day_ahead_temp_fixed.toml  linear_day_ahead_temp_learned.toml  linear_weekly_no_temp.toml  linear_weekly_temp_fixed.toml  linear_weekly_temp_learned.toml  naive_country.toml  sarimax_day_ahead.toml  sarimax_regions.toml  sarimax_weekly.toml
data_analysis/: ute.ipynb
duckbench/: data_cleanup.go  go.mod  main.go  outliers.go
scripts/: duckdb_create_localidad_estacion_table.sql  duckdb_create_temperatura_departamento_table.sql  duckdb_create_temperatura_montevideo_table.sql  duckdb_create_temperature_table.sql
src/: back_main.py  clustering.py  data_source.py  generate_clustering_vectors.py  global_model.py  goiener_data_analysis.ipynb  horizon.py  input.py  loader.py  main.py  metrics.py  normalizer.py  results.py  runner.py  series_examples.ipynb  simple-flow-clustering.py  simple-flow.py  u_shape.ipynb  validation.py
src/clusters/: base_cluster.py  cluster_averaging.py  cluster_transformation.py
src/forecasting/: arima_model.py  auto_correlation.py  autoformer.py  data_loader.py  encoder_decoder.py  experiment_handler.py  (+10 more)
(+36 files in other folders)
