[project]
name = "proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.38.0",
    "duckdb>=1.4.3",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "statsforecast>=2.0.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
